@@ -1,4 +1,4 @@
-$Id: History,v 1.52 2002-11-25 16:19:59 asaim Exp $
+$Id: History,v 1.53 2002-12-03 14:44:32 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Dec 03 2002, G.Cosmo (event-V04-01-08)
+- Protect code defining interface to HepMC from compilation on Windows systems.
+  Temporarly solution until CLHEP will support the HepMC module on Windows.
 
 Nov 25 2002, M.Asai (event-V04-01-07)
 - Fix a bug in G4CellScorer.cc
